# cdk-lambda-rust

./: .gitignore  Cargo.toml  cdk.json  package-lock.json  package.json
lib/: lambda-rust-stack.ts
rust_lambda/: Cargo.toml  README.md
rust_lambda/src/: event_handler.rs  main.rs
