[package]
name = "rust_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.0"
aws-sdk-s3 = { version = "=1.96.0", features = ["test-util"] }
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
    "s3",
] }
lambda_runtime = "0.14.0"
tokio = { version = "1", features = ["macros"] }
aws-sdk-sso = { version = "=1.74.0" }
aws-sdk-ssooidc = { version = "=1.75.0" }
aws-sdk-sts = { version = "=1.76.0" }
chrono = "0.4.41"
serde_json = "1.0.141"

[dev-dependencies]
aws-smithy-mocks = "0.1.1"
